# claude-devteam

./: .coderabbit.yaml  .gitignore  docker-compose.yml  pyproject.toml  trufflehog-config.yml
.github/workflows/: pr.yml
src/devteam/: __init__.py
src/devteam/agents/: __init__.py  (+4 more)
tests/: conftest.py  conftest_dbos.py  test_cli.py  test_config.py  test_daemon.py  test_database.py  test_dbos_smoke.py  test_e2e_workflow.py  test_init_agents.py  test_integration.py  test_models.py  test_project_agents.py  test_state.py
tests/agents/: test_contracts.py  test_integration.py  test_invoker.py  test_registry.py  test_templates.py
tests/cli/: test_concurrency_cmd.py  test_git_commands.py  test_interactive.py  test_job_cmd_v2.py  test_knowledge_cmd.py
tests/concurrency/: test_approval.py  test_cli_priority.py  test_config.py  test_durable_sleep.py  test_integration.py  test_priority.py  test_queue.py  test_rate_limit.py  test_rate_limit_invoke.py  test_status_display.py
tests/git/: conftest.py  test_branch.py  test_cleanup.py  test_fork.py  test_helpers.py  test_integration.py  test_pr.py  test_pr_feedback.py  test_recovery.py  test_worktree.py
tests/knowledge/: test_boundaries.py  test_decay.py  test_degradation.py  test_embeddings.py  test_extractor.py  test_index.py  test_integration.py  test_query_tool.py  test_store.py  test_vector_search.py
tests/orchestrator/: test_bootstrap.py  test_cli_bridge.py  test_dag.py  test_decomposition.py  test_escalation.py  test_events.py  test_git_steps.py  test_integration.py  test_jobs.py  test_review.py  test_routing.py  test_runtime.py  test_runtime_state.py  test_schemas.py  test_task_workflow.py  test_workflows.py
(+86 files in other folders)
