[project]
name = "claude-devteam"
version = "0.1.0"
description = "Durable AI Development Team Orchestrator"
requires-python = ">= 3.13"
dependencies = [
    "dbos>=2.16,<3",
    "fastapi>=0.135,<1",
    "uvicorn[standard]>=0.42,<1",
    "typer>=0.24,<1",
    "httpx>=0.28,<1",
    "pydantic>=2.12,<3",
    "pyyaml>=6,<7",
    "claude-agent-sdk==0.1.50",
    "surrealdb>=1.0.8,<2",
    "prompt_toolkit>=3.0,<4",
]

[project.scripts]
devteam = "devteam.cli.main:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/devteam"]

[tool.hatch.build]
include = ["src/devteam/**/*.py", "src/devteam/**/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".pixi/envs/default"

[tool.ruff]
target-version = "py313"
line-length = 100

[dependency-groups]
test = ["pytest>=8,<9", "pytest-asyncio>=0.23,<1"]
dev = ["ruff>=0.15,<1", "pyright>=1.1,<2"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "osx-64", "linux-64"]

[tool.pixi.dependencies]
python = ">=3.13,<3.14"

[tool.pixi.pypi-dependencies]
claude_devteam = { path = ".", editable = true }

[tool.pixi.environments]
default = { features = ["test", "dev"], solve-group = "default" }

[tool.pixi.tasks]
test = { cmd = "pytest tests/ -v", depends-on = [] }
lint = { cmd = "ruff check src/ tests/", depends-on = [] }
typecheck = { cmd = "pyright src/", depends-on = [] }
format = { cmd = "ruff format src/ tests/", depends-on = [] }
